Fix colors for dark mode

--- a/src/views/edit/md.css
+++ b/src/views/edit/md.css
@@ -74,7 +74,7 @@
     line-height:1.5em;
   }
   h1, h2, h3, h4, h5, h6 {
-    color: var(--color-brand);
+    color: var(--color-brand-font-dark);
     padding-bottom: 0em;
     padding-top: 2em;
     margin-top: 0em;
